app/assets/stylesheets/retos-publicos/_entry.scss
.padding-small {
  padding: 1em;
}

.header-entry {
  margin: 0px;
}

.text-white {
  color: white;
}

.text-green {
  color: $green;
}

.team-name {
  background: $green;
}

.image-medium {
  width: 200px;
  height: 150px;
}

.bottom-margin-large {
  margin-bottom: 40px;
}

.bottom-margin-medium {
  margin-bottom: 20px;
}

